<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="235dp"
        android:layout_height="291dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:background="?attr/withCardColor"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/chipCalendar"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="?attr/search"
        android:textSize="10sp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendar"
        app:strokeColor="#E1E1E1"
        app:strokeWidth="1dp"
        tools:ignore="SmallSp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calendar" />

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSearch"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:hint="@string/cityName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipCalendar">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/textEditLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="26dp"
        android:hint="@string/yyyy_mm_dd"
        android:textSize="10sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chipCalendar"
        app:layout_constraintTop_toBottomOf="@id/calendar"
        tools:ignore="SmallSp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#4D60CD"
        android:text="@string/_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>