<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/added_weather"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/chipDeleteAll"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="?attr/deleteAll"
        android:text="@string/update_weather"
        android:textSize="10sp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#B1B1B1"
        app:strokeWidth="1dp"
        tools:ignore="SmallSp"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="4dp"
            android:text="@string/delete_all" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/chipSearch"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="?attr/search"
        android:text="@string/update_weather"
        android:textSize="10sp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chipDeleteAll"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#7C7C7C"
        app:strokeWidth="1dp"
        tools:ignore="SmallSp"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardRecyclerAddedWeather"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:strokeColor="#F6B200"
        app:strokeWidth="2dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerAddedWeather"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:backgroundTint="?attr/toolbarColor"
        android:elevation="20dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:strokeColor="#131313"
        app:strokeWidth="2dp">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.fragment.app.FragmentContainerView>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>