<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headerDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="25 Апреля" />

    <ImageView
        android:id="@+id/imageHeader"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/moon"
        app:layout_constraintStart_toEndOf="@+id/headerDetails"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="@dimen/dimensDetails"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerDetails">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textMor"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/mor"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textTempMor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="20dp"
                android:textSize="15sp"
                tools:text="+5°c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textDay"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/day_ru"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textTempDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="20dp"
                android:textSize="15sp"
                tools:text="+10°c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textEve"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/eve_ru"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textTempEve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="20dp"
                android:textSize="15sp"
                tools:text="+11°c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textNight"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/night_ru"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textTempNight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="20dp"
                android:textSize="15sp"
                tools:text="+3°c" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewDetails"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="@dimen/dimensDetails"
        android:backgroundTint="?attr/lightCard"
        android:elevation="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:textSize="10sp"
                tools:ignore="SmallSp"
                tools:text="Давление 760 мм рт. ст." />

            <TextView
                android:id="@+id/speedWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textSize="10sp"
                tools:ignore="SmallSp"
                tools:text="Ветер 4.9 м/с" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textSize="10sp"
                tools:ignore="SmallSp"
                tools:text="Влажность воздуха 90%" />

            <TextView
                android:id="@+id/temp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:textSize="10sp"
                tools:ignore="SmallSp"
                tools:text="Ощущается как  +12" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.example.weatherpaint.ui.customView.TemperatureGraph
        android:id="@+id/tempGraph"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightGraph"
        android:layout_marginStart="224dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="@dimen/dimensDetails"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>